--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="label_preview_timespan">TIMESPAN</string>
+    <string name="title_activity__delete_subject">Activity_DeleteSubject</string>
 </resources>
