--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,8 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="label_preview_timespan">TIMESPAN</string>
     <string name="title_activity__delete_subject">Activity_DeleteSubject</string>
+    <string name="title_activity_edit_homework">EditHomeworkActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
